Revision history for Locale::Wolowitz

{{$NEXT}}
	- Added versions to prereqs
	- Added JSON recommendations to prereqs as JSON::Any doesn't require any JSON module

0.2       2010-12-26 16:03:29 Asia/Jerusalem
	- Changed distribution name to Locale::Wolowitz
	- Fixed some documentation errors

0.1       2010-12-25 22:28:01 Asia/Jerusalem
	- Initial release