@@ -1,5 +1,4 @@
 name    = Locale-Wolowitz
-version = 0.3
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
