@@ -1,8 +1,10 @@
 Revision history for Locale::Wolowitz
 
 {{$NEXT}}
+	- Added the ability to load just on localization file
 	- Added versions to prereqs
 	- Added JSON recommendations to prereqs as JSON::Any doesn't require any JSON module
+	- Improved documentation
 
 0.2       2010-12-26 16:03:29 Asia/Jerusalem
 	- Changed distribution name to Locale::Wolowitz
